--- a/Prisoners-Dilemma/Prisoners-Dilemma.Rmd
+++ b/Prisoners-Dilemma/Prisoners-Dilemma.Rmd
@@ -133,17 +133,15 @@ This paper investigates strategic behaviour in the repeated Prisoner's Dilemma b
 
 # Literature Review\label{litreview}
 
-The exploration of strategy choices within the framework of the prisoner’s dilemma has garnered extensive attention in recent literature. @axelrod1980effective's foundational work emphasised effective strategies in iterated scenarios, sparking a wealth of research on strategic behaviour in repeated interactions. His tournament studies laid the groundwork for understanding how cooperation can emerge in repeated prisoner’s dilemmas through strategies like TfT and other forms of reciprocity. This exploration of cooperative behaviour in an inherently competitive framework has been expanded by various scholars, each contributing unique insights into how individuals and institutions behave when faced with the tension between cooperation and defection.
+The exploration of strategic choice in the repeated Prisoner’s Dilemma has attracted significant scholarly attention. @axelrod1980effective foundational work demonstrated how cooperation could emerge in repeated interactions through strategies like TfT and reciprocity. This sparked further research on strategic behaviour in repeated competitive scenarios.
+Recent studies, such as @Pedro Dal Bó and Guillaume R. Fréchette, examine the strategic complexity of infinitely repeated games, revealing players’ adaptability in response to payoffs and opponents’ actions. In contrast, @breitmoser2015cooperation questions the predominance of reciprocity-based models, arguing that cooperation may arise from the structure of incentives rather than direct reciprocity.
 
-Recent studies, such as @dalbo2019strategy, have focused on the strategic complexity observed in infinitely repeated games. They provide empirical evidence that players in these settings are highly adaptive, often switching strategies depending on the payoffs and the perceived actions of their opponents. In contrast, @breitmoser2015cooperation questions the reciprocity-based models that dominate much of the literature, suggesting that while cooperation is often observed, it may not always stem from reciprocal motivations. @breitmoser2015cooperation finds that in many cases, cooperation might emerge from individual incentives structured by the game's dynamics, rather than a direct desire to reciprocate.
+A critical issue in the literature is the distinction between finite and infinite iterations of the dilemma. @kreps1982rational demonstrated that players may behave as if in an infinite game, cooperating due to potential future retaliation, even in games with known end points. @embrey2017cooperation confirmed that cooperation could persist in finite games under certain conditions.
 
-A significant portion of the literature has also addressed the challenges of finite versus infinite iterations of the dilemma. @kreps1982rational introduced the idea that even in finitely repeated games, players may behave as though they are in an infinite game, cooperating for fear of future retaliation, despite the known endpoint. This idea challenges the strict predictions of defection in the final stages of finitely repeated games and has been explored further by @embrey2017cooperation, who conducted laboratory experiments to observe how players adapt their strategies in finite games. Their findings support the hypothesis that cooperation can persist under certain conditions, even in games with a clear end.
+Other research, such as @romero2018constructing, focused on the cognitive processes underlying strategy construction in indefinite games, where players employ heuristics to handle uncertainty. @garcia2018no used simulations to show that no single strategy dominates consistently in the repeated Prisoner’s Dilemma, highlighting adaptability and context-dependent strategy selection as keys to success. @gaudesi2016exploiting used evolutionary models to demonstrate how strategies evolve in dynamic environments shaped by both cooperation and competition.
 
-@romero2018constructing investigated the cognitive processes behind strategy construction in indefinite games, emphasising how players use heuristics and simplified mental models to navigate the uncertainty of the game's length. This aligns with @farrell1988evolutionary earlier work on evolutionary stability, where they explored how long-term strategies evolve to withstand deviations from equilibrium behaviours.
-
-From a computational perspective, @garcia2018no utilised simulations to demonstrate that no single strategy could consistently dominate in the repeated prisoner’s dilemma, suggesting that adaptability and context-dependent strategy selection are key to success in such settings. Similarly, @gaudesi2016exploiting leveraged evolutionary modelling techniques to demonstrate how strategies evolve, competing in a dynamic landscape shaped by both cooperation and competition.
-
-The link between theoretical models and real-world applications has also been a point of focus. @lange2007teaching developed computerized tournaments to teach the mechanics of the repeated prisoner’s dilemma, blending theory with practice and providing insights into how strategic choices might play out in educational settings. Such studies highlight the importance of teaching and learning mechanisms in understanding strategic behaviour in social dilemmas. Taken together, the contemporary literature on strategy selection in the prisoner’s dilemma underscores the complexity of human decision-making in repeated interactions. 
+The practical application of these theories has also been explored. @lange2007teaching developed computerised tournaments to teach the mechanics of the repeated Prisoner’s Dilemma, offering insights into how strategic choices manifest in real-world scenarios. Overall, the literature underscores the complexity of human decision-making in repeated interactions and the nuanced nature of strategy selection.
+ 
 
 # The Standard Prisoners Dilemma
 
@@ -224,7 +222,7 @@ This game is played the same as above except now Social Preferences are taken in
 \end{table}
 ```
 
-The level _p_ here is adapted from @charness2002understanding who created a utility function that captures various social preferences. In essence, _p_ is how much you care about your opponent's pay-offs as well as your own. This paper will conduct the tournament as above for a range of _p_ values starting from _p_ = -1 where individuals are status seeking to _p_ = 0.5 where individuals care half as much about themselves as they do about others
+The level _p_ here is adapted from @charness2002understanding who created a utility function that captures various social preferences. In essence, _p_ is how much you care about your opponent's pay-offs as well as your own. This paper will conduct the tournament as above for a range of _p_ values starting from _p_ = -1 where individuals are status seeking to _p_ = 0.5 where individuals care half as much about themselves as they do about others.
 
 
 
@@ -303,10 +301,8 @@ strategies <- list(
 
 # Game Results
 
- 
 After the conclusion of the tournament, most interestingly unlike @axelrod1980effective, this paper does not find Tft as the winner in the standard Repeated Prisoners Dilemma. Table 4.1 gives the standard tournament without social preferences. The winner of the tournament was Probing Adjuster with 13575 points followed by Tft with Randomization which had 12887 points and Bully coming in third with 12869 points. In this game, Tft came fourth which leads us to believe similarly to @axelrod1980effective that Tft may have won due to the other strategies in the tournament. The winner of the Prisoners Dilemma is highly dependent on the strategies in the tournament.
 Always Cooperate and Random 90% came in second last and last respectively. This is as expected as the tournament included strategies that took advantage of other strategies which always cooperated. Most interestingly, if the adaptive strategies were removed then the Grim/Trigger strategy would have won the game. Also, even though Probing Adjuster won the tournament, the group of adaptive strategies as a whole performed worse than the group of Tit for Tat variant strategies. This result shows the robustness of Tit for Tat variants to perform well against both cooperators and defectors, maintaining high scores overall.
-
 
 \newpage
 
@@ -334,16 +330,9 @@ create_tournament_table(p_0_results, p_value = 0)
 Table 4.2 gives the standings of the tournament across different social preferences. The rankings of strategies change across these different values of _p_, illustrating how varying degrees of altruism or hostility affect the success of each strategy. Notably Always Cooperate improves its ranking as _p_ increases, moving from 25th at _p_ = -0.1 to 1st when _p_ = 0.45, showing that cooperative strategies perform better in environments where mutual benefit is prioritized. Always Defect, conversely, declines in rank as _p_ increases, indicating that purely selfish strategies are less effective when players care about the well-being of others. Tit for Tat maintains a relatively stable performance across various _p_ values, reflecting its robustness as a strategy that adapts well to different social preferences. This holds for the TfT variations in general. Probing Adjuster, which ranked first when _p_ = -0.1, drops significantly as p increases, indicating that more complex strategies designed for selfish environments are less effective in altruistic settings.
  
 
-
-
-
-
-
-
 ```{r}
 fullresults_rank %>% format_table()
 ```
-
 
 
 Figure \ref{pvalues} presents a graphical representation of how the total points of different strategies change as p varies. The x-axis represents different _p_ values, while the y-axis shows the total points for each strategy. From the figure we observe that Always Cooperate shows a steady increase in total points as _p_ increases, reinforcing the observation that this strategy benefits from environments where players value mutual cooperation. Always Defect exhibits declining points as _p_ increases, suggesting that as social preferences rise, defectors are penalized for their selfishness. TfT maintains consistently high points across all _p_ values, further proving its adaptability and effectiveness in both selfish and cooperative environments. Strategies like Probing Adjuster and Bully, which perform well in self-interested settings, see their points drop as _p_ increases, emphasizing their reduced effectiveness in more cooperative contexts.
@@ -357,13 +346,13 @@ fullresults_total %>%   plot_total_utilities()
 
 ```
 
-Figure \ref{pvalues} presents a graphical representation of how the total points of different strategies change as p varies. The x-axis represents different _p_ values, while the y-axis shows the total points for each strategy. From the figure we observe that Always Cooperate shows a steady increase in total points as _p_ increases, reinforcing the observation that this strategy benefits from environments where players value mutual cooperation. Always Defect exhibits declining points as _p_ increases, suggesting that as social preferences rise, defectors are penalized for their selfishness. TfT maintains consistently high points across all _p_ values, further proving its adaptability and effectiveness in both selfish and cooperative environments. Strategies like Probing Adjuster and Bully, which perform well in self-interested settings, see their points drop as _p_ increases, emphasizing their reduced effectiveness in more cooperative contexts.
+
 
 ```{r}
 fullresults_total %>% create_ranking_table()
 ```
 
-The analysis of the tournament shows how different strategies perform in the Prisoner's Dilemma under varying levels of social preference. The findings yield that in selfish scenarios, probing and aggressive strategies tend to win but as altruism increases, these strategies struggle. TfT variant strategies have shown to be robust under varying social preferences as can be seen in Table 4.3. Tft has the highest average points across the differing p-values showing its robustness in the face of differing social preferences. These findings once again provide insight into the strength of the TfT strategy. In Prisoner's Dilemma games where preferences may be hidden, TfT would according to these findings perform the best.  
+The analysis of the tournament shows how different strategies perform in the Prisoner's Dilemma under varying levels of social preference. The findings yield that in selfish scenarios, probing and aggressive strategies tend to win but as altruism increases, these strategies struggle. TfT variant strategies have shown to be robust under varying social preferences as can be seen in Table 4.3. Tft has the highest average points across the differing p-values showing its robustness in the face of differing social preferences which can also be seen in Table 4.4. These findings once again provide insight into the strength of the TfT strategy. In Prisoner's Dilemma games where preferences may be hidden, TfT would according to these findings perform the best.  
 
 ```{r}
 
